--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-First Commit
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing Page Guttizin</title>
+</head>
+<body>
+    <h1>Hi There!</h1>
+</body>
+</html>
